--- a/.github/workflows/dispatch-handler.yml
+++ b/.github/workflows/dispatch-handler.yml
@@ -3,6 +3,10 @@ on:
   repository_dispatch:
     types: [trigger-tests]
 
+permissions:
+  issues: write
+  pull-requests: write
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
