--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -11,6 +11,10 @@ on:
         type: string
         description: "Pull request number from the calling repository"
 
+permissions:
+  issues: write
+  pull-requests: write
+
 jobs:
   run-tests:
     runs-on: ubuntu-latest
