--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -9,8 +9,16 @@ on:
         required: true
         type: number
     secrets:
-      PAT_TOKEN:
+      PTT_TOKEN:
         required: true
+  workflow_dispatch:
+    inputs:
+      caller-repo:
+        required: false
+        type: string
+      pr-number:
+        required: false
+        type: number
 
 permissions:
   issues: write
@@ -23,7 +31,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: karwatmateusz/Playwright-template
-          token: ${{ secrets.PAT_TOKEN }}
+          token: ${{ secrets.PTT_TOKEN }}
 
       - uses: actions/setup-node@v4
         with:
