--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -9,7 +9,7 @@ on:
         required: true
         type: number
     secrets:
-      PTT_TOKEN:
+      PAT_TOKEN:
         required: true
   workflow_dispatch:
     inputs:
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: karwatmateusz/Playwright-template
-          token: ${{ secrets.PTT_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
 
       - uses: actions/setup-node@v4
         with:
